# rusty_magnets

./: Cargo.toml  README.md  Rocket.toml
migrations/20170507161546_create_magnets/: down.sql  up.sql
src/: lib.rs  main.rs
src/magnet/: controller.rs  magnet.rs  mod.rs
static/: list.html.tera  master.html.tera
static/css/: style.css
static/js/: script.js
